[package]
name = "solana-metrics-duplicator"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.2.5", features = ["derive", "wrap_help"] }
clap_builder = "4.2.5"
clap_derive = "4.2.0"
env_logger = "*"
log = "*"
hyper = { version = "0.14", features = ["server"] }
reqwest = {version = "0.11.18", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
